// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defaults 1`] = `
"/** @type {import('@babel/core').TransformOptions} */
const config = {}

export default config
"
`;

exports[`with blank config API function 1`] = `
"/** @type {import('@babel/core').ConfigFunction} */
const config = (api) => {
return {}
}

export default config
"
`;

exports[`with config API function 1`] = `
"/** @type {import('@babel/core').ConfigFunction} */
const config = (api) => {
api.cache(true)

return {}
}

export default config
"
`;

exports[`with config API function and transform options 1`] = `
"/** @type {import('@babel/core').ConfigFunction} */
const config = (api) => {
api.cache(true)

return {
  "presets": [
    "@babel/preset-env"
  ]
}
}

export default config
"
`;

exports[`with filename 1`] = `
"/** @type {import('@babel/core').TransformOptions} */
const config = {}

export default config
"
`;

exports[`with transform options 1`] = `
"/** @type {import('@babel/core').TransformOptions} */
const config = {
  "presets": [
    "@babel/preset-env"
  ]
}

export default config
"
`;
